#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
RH-2012-04-13-2:  Cleanup     Remove arch.dist

RH-2012-04-13-1:  Enhancem.   hwloc build changes

RH-2012-04-13-0:  Enhancem.   Misc GUI Installer cleanup - part 1

RH-2012-04-11-0:  Enhancem.   Preparing for the GE 2011.11 patch 1 release

RH-2012-04-10-0:  Bugfix:     Merge in Sun's JG-2010-01-13-0:
                              - execd does not verify the pe task start user in
                                non CSP mode

RH-2012-03-20-3:  Misc.       -Wno-strict-aliasing is needed for -Werror

RH-2012-03-20-2:  Enhancem.   qmon is now optional

RH-2012-03-20-1:  Enhancem.   LessTif support (from Fedora)

RH-2012-03-20-0:  Enhancem.   Quick fix for Solaris 11

RH-2012-03-18-0:  Enhancem.   Reduce the no. of X11 libs for libXltree link line

RH-2012-03-17-5:  Bugfix:     Changes for OpenSSL API diff. 

RH-2012-03-17-4:  Enhancem.   Fine-grained CheckBinaries()

RH-2012-03-17-3:  Enhancem.   remove unused -R compiler flag in qtcsh

RH-2012-03-17-2:  Enhancem.   include header file for NetBSD & FreeBSD

RH-2012-03-17-1:  Enhancem.   Break warn extra error into a separate flag

RH-2012-03-17-0:  Enhancem.   More aimk improvements

RH-2012-03-16-3:  Enhancem.   improve sys #ifdef

RH-2012-03-16-2:  Enhancem.   minor aimk cleanup

RH-2012-03-16-1:  Enhancem.   added aimk flag: -sys-libssl

RH-2012-03-16-0:  Enhancem.   Set $PATH in bdb_checkpoint.sh

RH-2012-03-15-2:  Enhancem.   Misc. cleanup

RH-2012-03-15-1:  Enhancem.   Cygwin cleanup

RH-2012-03-15-0:  Enhancem.   sge_edit cleanup

RH-2012-03-12-0:  Enhancem.   aimk cleanup

RH-2012-02-15-0:  Enhancem.:  - cleanup inst_sge